2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/const.py.in : add USER_xxx for more centralization
	* src/ViewManager.py : use const.USER_DOCGEN
	* src/ReportBase/_TemplateParser.py : use const.USER_TEMPLATES
	* src/plugins/WebCal.py : use const.USER_PLUGINS
	* src/plugins/Calendar.py : use const.USER_PLUGINS
	* src/gramps_main.py : use const.USER_DIRLIST
	const,py.in also includes TEMP_DIR (for upcoming change)

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/ArgHandler.py : #1397 add except clause for GrampsDbException
	applies to CLI (not) handling of grdb imports

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/test/regrtest.py : really do the checkin this time

2007-11-25 Jim Sack <jgsack@san.rr.com>
	* src/gen/lib/test/date_test.py : make regrtest-compatible
	* src/test/regrtest.py : add rsplit("/")

2007-11-25 Benny Malengier <benny.malengier@gramps-project.org>
	* src/gen/lib/notetype.py: type report, citation
	* src/plugins/NarrativeWeb.py: new selection of home note & home media
	* src/GrampsWidgets.py: NoteEntry, MediaEntry
	I intend to change the other note selectors likewise next.

2007-11-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: refer to Config values via Config.get()
	* src/gen/lib/test/date_test.py: set Config values before testing

2007-11-25  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Config/_GrampsGconfKeys.py: fixed changes in gconf interface

2007-11-25  Douglas S.Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/test/date_test.py: turned each test into a case

2007-11-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsWidgets.py: ObjEntry, PlaceEntry and NoteEntry inherit from it.

2007-11-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/gen/lib/date.py: had to import calendar by path.name
	  (so that the import of date_test would work)
	* src/gen/lib/test: new test directory
	* src/gen/lib/test/date_test.py: unittests for date.py
