@@ -1,4 +1,10 @@
 2007-11-25 Jim Sack <jgsack@san.rr.com>
+	* src/gramps_main.py : remove trial code left in on last commit
+	the r9407 trial code may be of interest as it demos how I avoid
+	gui popups when doing CLI testing -- but I think there's probably
+	a cleaner way, and maybe it also deserves a CLI option.
+
+2007-11-25 Jim Sack <jgsack@san.rr.com>
 	* src/const.py.in : add USER_xxx for more centralization
 	* src/ViewManager.py : use const.USER_DOCGEN
 	* src/ReportBase/_TemplateParser.py : use const.USER_TEMPLATES
